[package]
name = "agb_template"
version = "0.1.0"
authors = [""]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#agb = { version = "0.20.5"}
agb = { path = "../agb/agb" }
#agb_image_converter = { path = "../agb/agb-image-converter" }
agbrs_flash = { path = "../agbrs_flash" }
rand = { version = "0.8.5", default-features = false }
rand_xoshiro = { version = "0.6.0", default-features = false }
bresenham = "0.1.1"
serde = { version = "1.0.203", features = ["derive"], default-features = false }
once_cell = { version = "1.19.0", default-features = false }

[profile.dev]
opt-level = 3
debug = true

[profile.release]
opt-level = 3
lto = "fat"
debug = true
